Projet_GL/src/test/deca/context/valid/unprovided/testObjet/fields/declFieldInExtend.deca
// Description:
//   Définition d'une classe avec 2 champs initialisés
//
// Resultat:
//    Aucune erreur attendue
//
// Historique:
//    cree le 22/01/2018

class A{
      int x;
}
class B extends A{
      int x = 3;
}
